--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="./images/451833027_1661303218004314_616731216345352039_n-removebg-preview.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>$DOG</title>
   </head>
   <body>
@@ -58,20 +58,25 @@
           <div>
             <span>Renounced</span>
             <span
-              >No rug pulls!<br> Contract ownership renounced for ultimate
-              trust.</span
+              >No rug pulls!<br />
+              Contract ownership renounced for ultimate trust.</span
             >
           </div>
           <div>
-            <span>Burnt LP</span>
+            <span>LP Locked</span>
             <span
-              >Fair launch!<br> 100% of LP tokens we burned. Link in our
-              groupchat.</span
+              >Fair launch!<br />
+              It means the token of liquidity provider holder cannot be
+              withdrawn, keeping the project for a long road.</span
             >
           </div>
           <div>
-            <span>No Tax!</span>
-            <span>Buying and selling $POSEIDON is completely tax-free!</span>
+            <span>Mini Tax!</span>
+            <span
+              >Buying and selling $DOG buy and sell rate will be only 5/5! It
+              means 2% comes to buy back, 2% comes to dev's wallet, and 1% comes
+              to liquidity pool.</span
+            >
           </div>
         </div>
       </div>
@@ -119,7 +124,7 @@
           <span>Step 1</span>
           <span>Get a wallet</span>
           <span
-            >You'll need a wallet like Metamask to store your $POSEIDON
+            >You'll need a wallet like Metamask to store your $DOG
             tokens.</span
           >
         </div>
