--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
-          <span>0%</span>
+          <span>5/5</span>
         </div>
       </div>
     </section>
