--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>$DOG</title>
+    <title>$CHO</title>
   </head>
   <body>
     <section class="navbar">
-      <span class="ticker">$DOG</span>
+      <span class="ticker">$CHO</span>
       <div class="navbar-points">
         <a href="#about">About</a>
         <a href="#about">Community</a>
@@ -30,10 +30,10 @@
     <section class="header">
       <div class="header-intro">
         <span>Hello I am</span>
-        <span>$DOG</span>
+        <span>$CHO</span>
         <span>The Binance's model dog</span>
         <div class="view-chart">
-          <a href="" target="_blank">Buy $DOG</a>
+          <a href="" target="_blank">Buy $CHO</a>
           <a href="" target="_blank">View Chart</a>
         </div>
       </div>
@@ -43,17 +43,17 @@
       />
     </section>
     <section class="about" id="about">
-      <span class="about-text">About $DOG</span>
+      <span class="about-text">About $CHO</span>
       <div class="about-div">
-        <span>$DOG is a representation for Binance pet community!</span>
+        <span>$CHO is a representation for Binance pet community!</span>
         <span
-          >$DOG is inspired by the beloved Binance dog. He is also known as
+          >$CHO is inspired by the beloved Binance dog. He is also known as
           Binance's model as he is lovely and enthusiastic as its owner. Let's
           join the community and bond!</span
         >
       </div>
       <div class="why" id="why">
-        <span class="about-text">Why $DOG ?</span>
+        <span class="about-text">Why $CHO ?</span>
         <div>
           <div>
             <span>Renounced</span>
@@ -73,7 +73,7 @@
           <div>
             <span>Mini Tax!</span>
             <span
-              >Buying and selling $DOG buy and sell rate will be only 5/5! It
+              >Buying and selling $CHO buy and sell rate will be only 5/5! It
               means 2% comes to buy back, 2% comes to dev's wallet, and 1% comes
               to liquidity pool.</span
             >
@@ -104,7 +104,7 @@
         </div>
         <div>
           <span>Symbol:</span>
-          <span>$DOG</span>
+          <span>$CHO</span>
         </div>
         <div>
           <span>LP:</span>
@@ -118,13 +118,13 @@
     </section>
     <section class="how-to-buy" id="how-to-buy">
       <span>How To Buy ?</span>
-      <span>Follow the steps below to get some $DOG!</span>
+      <span>Follow the steps below to get some $CHO!</span>
       <div>
         <div>
           <span>Step 1</span>
           <span>Get a wallet</span>
           <span
-            >You'll need a wallet like Metamask to store your $DOG
+            >You'll need a wallet like Metamask to store your $CHO
             tokens.</span
           >
         </div>
@@ -132,7 +132,7 @@
           <span>Step 2</span>
           <span>Get some Sol</span>
           <span
-            >$DOG is on Binance Smart Chain, so you'll need some BNB tokens to
+            >$CHO is on Binance Smart Chain, so you'll need some BNB tokens to
             purchase it.</span
           >
         </div>
@@ -152,7 +152,7 @@
         <a href="" target="_blank">Twitter</a>
         <a href="" target="_blank">Telegram</a>
       </div>
-      <span>$DOG</span>
+      <span>$CHO</span>
       <div>
         <span>Links:</span>
         <a href="" target="_blank">Pancakeswap</a>
