--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
     </section>
     <section class="about" id="about">
       <span class="about-text">About $CHO</span>
-      <div class="about-div">
-        <span>$CHO is a representation for Binance pet community!</span>
-        <span
-          >$CHO is inspired by the beloved Binance dog. He is also known as
-          Binance's model as he is lovely and enthusiastic as its owner. Let's
-          join the community and bond!</span
-        >
+      <div>
+        <img src="./images/meme1.jpg" alt="" />
+        <div class="about-div">
+          <span>$CHO is a representation for Binance pet community!</span>
+          <span
+            >$CHO is inspired by the beloved Binance dog. He is also known as
+            Binance's model as he is lovely and enthusiastic as its owner. Let's
+            join the community and bond!</span
+          >
+        </div>
       </div>
       <div class="why" id="why">
         <span class="about-text">Why $CHO ?</span>
@@ -124,8 +127,7 @@
           <span>Step 1</span>
           <span>Get a wallet</span>
           <span
-            >You'll need a wallet like Metamask to store your $CHO
-            tokens.</span
+            >You'll need a wallet like Metamask to store your $CHO tokens.</span
           >
         </div>
         <div>
