--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="about" id="about">
       <span class="about-text">About $CHO</span>
       <div>
-        <img src="./images/meme1.jpg" alt="" />
+        <img src="./images/newpic.PNG" alt="" />
         <div class="about-div">
           <span>$CHO is a representation for Binance pet community!</span>
           <span
