--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="header-intro">
         <span>Hello I am</span>
         <span>$CHO</span>
-        <span>The Binance's model dog</span>
+        <span>Meet new Chief Happiness Officer of Binance</span>
         <div class="view-chart">
           <a href="" target="_blank">Buy $CHO</a>
           <a href="" target="_blank">View Chart</a>
@@ -110,7 +110,7 @@
           <span>$CHO</span>
         </div>
         <div>
-          <span>LP:</span>
+          <span>Supply:</span>
           <span>1,000,000,000</span>
         </div>
         <div>
