--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div>
           <span>Step 2</span>
-          <span>Get some Sol</span>
+          <span>Get some BNB</span>
           <span
             >$CHO is on Binance Smart Chain, so you'll need some BNB tokens to
             purchase it.</span
@@ -140,7 +140,7 @@
         </div>
         <div>
           <span>Step 3</span>
-          <span>Buy on Poocoin</span>
+          <span>Buy on PancakeSwap</span>
           <span
             >Go to Pancakeswap, paste the token's CA and choose the amount of
             BNB you want to spend.</span
