--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       >
       <div>
         <a target="_blank" href="">Telegram</a>
-        <a target="_blank" href="https://x.com/binance/status/1813151628280680862">Twitter</a>
+        <a target="_blank" href="https://x.com/BinanceDogStory">Twitter</a>
       </div>
     </section>
     <section class="tokenomics" id="tokenomics">
@@ -151,7 +151,7 @@
     <section class="socials" id="socials">
       <div>
         <span>Our Socials:</span>
-        <a href="https://x.com/binance/status/1813151628280680862" target="_blank">Twitter</a>
+        <a href="https://x.com/BinanceDogStory" target="_blank">Twitter</a>
         <a href="" target="_blank">Telegram</a>
       </div>
       <span>$CHO</span>
