--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
             >
           </div>
           <div>
-            <span>Mini Tax!</span>
+            <span>No Tax!</span>
             <span
-              >Buying and selling $CHO buy and sell rate will be only 5/5! It
-              means 2% comes to buy back, 2% comes to dev's wallet, and 1% comes
-              to liquidity pool.</span
+              >Buying and selling $CHO buy and sell rate will have no tax!</span
             >
           </div>
         </div>
@@ -91,14 +89,14 @@
         regular updates on the project.</span
       >
       <div>
-        <a target="_blank" href="">Telegram</a>
+        <a target="_blank" href="https://t.me/BinanceDogStory">Telegram</a>
         <a target="_blank" href="https://x.com/BinanceDogStory">Twitter</a>
       </div>
     </section>
     <section class="tokenomics" id="tokenomics">
       <span>Tokenomics</span>
       <div class="ca">
-        <span>CA: Coming soon!</span>
+        <span>CA: DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4</span>
       </div>
       <div class="grids">
         <div>
@@ -115,7 +113,7 @@
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
-          <span>5/5</span>
+          <span>No tax!</span>
         </div>
       </div>
     </section>
@@ -127,23 +125,23 @@
           <span>Step 1</span>
           <span>Get a wallet</span>
           <span
-            >You'll need a wallet like Metamask to store your $CHO tokens.</span
+            >You'll need a wallet like Phantom to store your $CHO tokens.</span
           >
         </div>
         <div>
           <span>Step 2</span>
-          <span>Get some BNB</span>
+          <span>Get some Sol</span>
           <span
-            >$CHO is on Binance Smart Chain, so you'll need some BNB tokens to
+            >$CHO is on Solana Chain, so you'll need some Sol tokens to
             purchase it.</span
           >
         </div>
         <div>
           <span>Step 3</span>
-          <span>Buy on PancakeSwap</span>
+          <span>Buy on Dexscreener</span>
           <span
-            >Go to Pancakeswap, paste the token's CA and choose the amount of
-            BNB you want to spend.</span
+            >Go to Dexscreener, paste the token's CA and choose the amount of
+            Sol you want to spend.</span
           >
         </div>
       </div>
@@ -152,13 +150,12 @@
       <div>
         <span>Our Socials:</span>
         <a href="https://x.com/BinanceDogStory" target="_blank">Twitter</a>
-        <a href="" target="_blank">Telegram</a>
+        <a href="https://t.me/BinanceDogStory" target="_blank">Telegram</a>
       </div>
       <span>$CHO</span>
       <div>
         <span>Links:</span>
-        <a href="" target="_blank">Pancakeswap</a>
-        <a href="" target="_blank">Poocoin</a>
+        <a href="" target="_blank">Dexscreener</a>
       </div>
     </section>
   </body>
