--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         <span>$CHO</span>
         <span>Meet new Chief Happiness Officer of Binance</span>
         <div class="view-chart">
-          <a href="" target="_blank">Buy $CHO</a>
+          <a
+            href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
+            target="_blank"
+            >Buy $CHO</a
+          >
           <a href="" target="_blank">View Chart</a>
         </div>
       </div>
@@ -68,9 +72,8 @@
           <div>
             <span>LP Locked</span>
             <span
-              >Fair launch!<br />
-              It means the token of liquidity provider holder cannot be
-              withdrawn, keeping the project for a long road.</span
+              >Pre-sale!<br />
+              Secure your funds before launching!</span
             >
           </div>
           <div>
@@ -132,8 +135,8 @@
           <span>Step 2</span>
           <span>Get some Sol</span>
           <span
-            >$CHO is on Solana Chain, so you'll need some Sol tokens to
-            purchase it.</span
+            >$CHO is on Solana Chain, so you'll need some Sol tokens to purchase
+            it.</span
           >
         </div>
         <div>
@@ -156,6 +159,11 @@
       <div>
         <span>Links:</span>
         <a href="" target="_blank">Dexscreener</a>
+        <a
+          href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
+          target="_blank"
+          >Pinksale</a
+        >
       </div>
     </section>
   </body>
