--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div>
           <span>Supply:</span>
-          <span>1,000,000,000</span>
+          <span>1,000,000,000. 10% is from Binance, 10% comes from Davici</span>
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
