--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span class="ticker">$CHO</span>
       <div class="navbar-points">
         <a href="#about">About</a>
-        <a href="#about">Community</a>
+        <a href="https://t.me/BinanceDogStory" target="_blank">Community</a>
         <a href="#tokenomics">Token</a>
         <a href="#how-to-buy">How To Buy</a>
       </div>
