--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>$CHO</title>
+    <title>$DOGS</title>
   </head>
   <body>
     <section class="navbar">
-      <span class="ticker">$CHO</span>
+      <span class="ticker">$DOGS</span>
       <div class="navbar-points">
         <a href="#about">About</a>
         <a href="https://t.me/BinanceDogStory" target="_blank">Community</a>
@@ -30,13 +30,13 @@
     <section class="header">
       <div class="header-intro">
         <span>Hello I am</span>
-        <span>$CHO</span>
+        <span>$DOGS</span>
         <span>Meet new Chief Happiness Officer of Binance</span>
         <div class="view-chart">
           <a
             href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
             target="_blank"
-            >Buy $CHO</a
+            >Buy $DOGS</a
           >
           <a href="" target="_blank">View Chart</a>
         </div>
@@ -47,20 +47,20 @@
       />
     </section>
     <section class="about" id="about">
-      <span class="about-text">About $CHO</span>
+      <span class="about-text">About $DOGS</span>
       <div>
         <img src="./images/newpic.PNG" alt="" />
         <div class="about-div">
-          <span>$CHO is a representation for Binance pet community!</span>
+          <span>$DOGS is a representation for Binance pet community!</span>
           <span
-            >$CHO is inspired by the beloved Binance dog. He is also known as
+            >$DOGS is inspired by the beloved Binance dog. He is also known as
             Binance's model as he is lovely and enthusiastic as its owner. Let's
             join the community and bond!</span
           >
         </div>
       </div>
       <div class="why" id="why">
-        <span class="about-text">Why $CHO ?</span>
+        <span class="about-text">Why $DOGS ?</span>
         <div>
           <div>
             <span>Renounced</span>
@@ -79,7 +79,7 @@
           <div>
             <span>No Tax!</span>
             <span
-              >Buying and selling $CHO buy and sell rate will have no tax!</span
+              >Buying and selling $DOGS buy and sell rate will have no tax!</span
             >
           </div>
         </div>
@@ -108,11 +108,11 @@
         </div>
         <div>
           <span>Symbol:</span>
-          <span>$CHO</span>
+          <span>$DOGS</span>
         </div>
         <div>
           <span>Supply:</span>
-          <span>1,000,000,000. 10% is from Binance, 10% comes from Davici</span>
+          <span>720,170,000,000. 10% is from Binance, 10% comes from Davici</span>
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
