--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
             target="_blank"
             >Buy $DOGS</a
           >
-          <a href="" target="_blank">View Chart</a>
+          <a
+            href="https://dexscreener.com/solana/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4"
+            target="_blank"
+            >Dexscreener</a
+          >
         </div>
       </div>
       <img
@@ -79,7 +83,8 @@
           <div>
             <span>No Tax!</span>
             <span
-              >Buying and selling $DOGS buy and sell rate will have no tax!</span
+              >Buying and selling $DOGS buy and sell rate will have no
+              tax!</span
             >
           </div>
         </div>
@@ -112,7 +117,9 @@
         </div>
         <div>
           <span>Supply:</span>
-          <span>720,170,000,000. 10% is from Binance, 10% comes from Davici</span>
+          <span
+            >720,170,000,000. 10% is from Binance, 10% comes from Davici</span
+          >
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
@@ -158,7 +165,11 @@
       <span>$CHO</span>
       <div>
         <span>Links:</span>
-        <a href="" target="_blank">Dexscreener</a>
+        <a
+          href="https://dexscreener.com/solana/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4"
+          target="_blank"
+          >Dexscreener</a
+        >
         <a
           href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
           target="_blank"
