--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             target="_blank"
             >Dexscreener</a
           >
+          <a
+            href="https://www.dextools.io/app/en/solana/pair-explorer/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4?t=1722333850835"
+            target="_blank"
+            >Dextools</a
+          >
         </div>
       </div>
       <img
@@ -174,6 +179,11 @@
           href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
           target="_blank"
           >Pinksale</a
+        >
+        <a
+          href="https://www.dextools.io/app/en/solana/pair-explorer/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4?t=1722333850835"
+          target="_blank"
+          >Dextools</a
         >
       </div>
     </section>
