--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
           <a
             href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
             target="_blank"
-            >Buy $DOGS</a
+            ><img src="./images/pinksale.png" alt=""></a
           >
           <a
             href="https://dexscreener.com/solana/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4"
             target="_blank"
-            >Dexscreener</a
+            ><img src="./images/dexscreener.png" alt=""></a
           >
           <a
             href="https://www.dextools.io/app/en/solana/pair-explorer/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4?t=1722333850835"
             target="_blank"
-            >Dextools</a
+            ><img src="./images/dextool.jpg" alt=""></a
           >
         </div>
       </div>
