--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         src="./images/451833027_1661303218004314_616731216345352039_n-removebg-preview.png"
         alt=""
       />
+      <img src="./images/Solana-removebg-preview.png" alt="" class="img-absolute">
     </section>
     <section class="about" id="about">
       <span class="about-text">About $DOGS</span>
@@ -79,7 +80,7 @@
             >
           </div>
           <div>
-            <span>LP Locked</span>
+            <span>LP Burned</span>
             <span
               >Pre-sale!<br />
               Secure your funds before launching!</span
@@ -167,7 +168,7 @@
         <a href="https://x.com/BinanceDogStory" target="_blank">Twitter</a>
         <a href="https://t.me/BinanceDogStory" target="_blank">Telegram</a>
       </div>
-      <span>$CHO</span>
+      <span>$DOGS</span>
       <div>
         <span>Links:</span>
         <a
