--- a/index.html
+++ b/index.html
@@ -36,25 +36,31 @@
           <a
             href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
             target="_blank"
-            ><img src="./images/pinksale.png" alt=""></a
-          >
+            ><img src="./images/pinksale.png" alt=""
+          /></a>
           <a
             href="https://dexscreener.com/solana/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4"
             target="_blank"
-            ><img src="./images/dexscreener.png" alt=""></a
-          >
+            ><img src="./images/dexscreener.png" alt=""
+          /></a>
           <a
             href="https://www.dextools.io/app/en/solana/pair-explorer/DPekQ4tTrEU9mKhFbQJAjGdZbxK5mNHPa37QvuewG9v4?t=1722333850835"
             target="_blank"
-            ><img src="./images/dextool.jpg" alt=""></a
-          >
+            ><img src="./images/dextool.jpg" alt=""
+          /></a>
         </div>
       </div>
-      <img
-        src="./images/451833027_1661303218004314_616731216345352039_n-removebg-preview.png"
-        alt=""
-      />
-      <img src="./images/Solana-removebg-preview.png" alt="" class="img-absolute">
+      <div>
+        <img
+          src="./images/451833027_1661303218004314_616731216345352039_n-removebg-preview.png"
+          alt=""
+        />
+        <img
+          src="./images/Solana-removebg-preview.png"
+          alt=""
+          class="img-absolute"
+        />
+      </div>
     </section>
     <section class="about" id="about">
       <span class="about-text">About $DOGS</span>
@@ -124,12 +130,25 @@
         <div>
           <span>Supply:</span>
           <span
-            >720,170,000,000. 10% is from Binance, 10% comes from Davici</span
+            >720,170,000,000. 10% is from Binance, 10% comes from Davinci</span
           >
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
           <span>No tax!</span>
+        </div>
+      </div>
+    </section>
+    <section class="holder">
+      <span>Supply holders</span>
+      <div>
+        <div>
+          <a href="https://x.com/Davincij15" target="_blank">Davinci(10%)</a>
+          <img src="./images/davinci.jpg" alt="" />
+        </div>
+        <div>
+          <a href="https://x.com/binance" target="_blank"n>Binance(10%)</a>
+          <img src="./images/binance.jpg" alt="" />
         </div>
       </div>
     </section>
