--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div>
           <span>Supply:</span>
           <span
-            >720,170,000,000. 10% is from Binance, 10% comes from Davinci</span
+            >720,170,000,000</span
           >
         </div>
         <div>
