--- a/index.html
+++ b/index.html
@@ -129,14 +129,25 @@
         </div>
         <div>
           <span>Supply:</span>
-          <span
-            >720,170,000,000</span
-          >
+          <span>720,170,000,000</span>
         </div>
         <div>
           <span>Buy/Sell Tax:</span>
           <span>No tax!</span>
         </div>
+      </div>
+      <div class="fyi">
+        <span
+          >(*) The number of $DOGS supply token is meaningfully made equally to
+          the Binance Founded Time: 07/2017 * 1,000,000, which adds more
+          significant meaning to the beloved dog!</span
+        >
+        <a
+          href="https://en.m.wikipedia.org/wiki/Binance"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Know more about Binance Founded Time.</a
+        >
       </div>
     </section>
     <section class="holder">
@@ -147,7 +158,7 @@
           <img src="./images/davinci.jpg" alt="" />
         </div>
         <div>
-          <a href="https://x.com/binance" target="_blank"n>Binance(10%)</a>
+          <a href="https://x.com/binance" target="_blank" n>Binance(10%)</a>
           <img src="./images/binance.jpg" alt="" />
         </div>
       </div>
