--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             Binance's model as he is lovely and enthusiastic as its owner. Let's
             join the community and bond!</span
           >
+          <img src="./images/dog2.jpg" alt="" />
         </div>
       </div>
       <div class="why" id="why">
