--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     <section class="about" id="about">
       <span class="about-text">About $DOGS</span>
       <div>
-        <img src="./images/newpic.PNG" alt="" />
         <div class="about-div">
           <span>$DOGS is a representation for Binance pet community!</span>
           <span
@@ -73,7 +72,10 @@
             Binance's model as he is lovely and enthusiastic as its owner. Let's
             join the community and bond!</span
           >
-          <img src="./images/dog2.jpg" alt="" />
+          <div>
+            <img src="./images/newpic.PNG" alt="" />
+            <img src="./images/dog2.jpg" alt="" />
+          </div>
         </div>
       </div>
       <div class="why" id="why">
