--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="header-intro">
         <span>Hello I am</span>
         <span>$DOGS</span>
-        <span>Meet new Chief Happiness Officer of Binance</span>
+        <span>Meet new Chief Happiness Officer of BSC(Fanmade)</span>
         <div class="view-chart">
           <a
             href="https://www.pinksale.finance/solana/launchpad/2SU3WgbWkm4K8Zbek3eX6xrH3ed4rbsLzTZrChbrt9XP"
@@ -66,10 +66,10 @@
       <span class="about-text">About $DOGS</span>
       <div>
         <div class="about-div">
-          <span>$DOGS is a representation for Binance pet community!</span>
+          <span>$DOGS is a representation for BSC pet community!(Fanmade)</span>
           <span
-            >$DOGS is inspired by the beloved Binance dog. He is also known as
-            Binance's model as he is lovely and enthusiastic as its owner. Let's
+            >$DOGS is inspired by the beloved BSC dog. He is also known as
+            BSC's model as he is lovely and enthusiastic as its owner. Let's
             join the community and bond!</span
           >
           <div>
@@ -124,7 +124,7 @@
       <div class="grids">
         <div>
           <span>Name:</span>
-          <span>Binance Dog</span>
+          <span>BSCDog on Solana</span>
         </div>
         <div>
           <span>Symbol:</span>
@@ -142,14 +142,14 @@
       <div class="fyi">
         <span
           >(*) The number of $DOGS supply token is meaningfully made equally to
-          the Binance Founded Time: 07/2017 * 1,000,000, which adds more
+          the BSC Founded Time: 07/2017 * 1,000,000, which adds more
           significant meaning to the beloved dog!</span
         >
         <a
           href="https://en.m.wikipedia.org/wiki/Binance"
           target="_blank"
           rel="noopener noreferrer"
-          >Know more about Binance Founded Time.</a
+          >Know more about BSC Founded Time.</a
         >
       </div>
     </section>
