--- a/index.html
+++ b/index.html
@@ -168,20 +168,20 @@
     </section>
     <section class="how-to-buy" id="how-to-buy">
       <span>How To Buy ?</span>
-      <span>Follow the steps below to get some $CHO!</span>
+      <span>Follow the steps below to get some $DOGS!</span>
       <div>
         <div>
           <span>Step 1</span>
           <span>Get a wallet</span>
           <span
-            >You'll need a wallet like Phantom to store your $CHO tokens.</span
+            >You'll need a wallet like Phantom to store your $DOGS tokens.</span
           >
         </div>
         <div>
           <span>Step 2</span>
           <span>Get some Sol</span>
           <span
-            >$CHO is on Solana Chain, so you'll need some Sol tokens to purchase
+            >$DOGS is on Solana Chain, so you'll need some Sol tokens to purchase
             it.</span
           >
         </div>
