--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <span>Our Socials:</span>
         <a href="https://x.com/BinanceDogStory" target="_blank">Twitter</a>
         <a href="https://t.me/BinanceDogStory" target="_blank">Telegram</a>
-        <a href="mailto:binancedogbsc@gmail.com">Mail</a>
+        <a href="mailto:binancedogbsc@gmail.com">binancedogbsc@gmail.com</a>
       </div>
       <span>$DOGS</span>
       <div>
