--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div>
         <a target="_blank" href="https://t.me/BinanceDogStory">Telegram</a>
         <a target="_blank" href="https://x.com/BinanceDogStory">Twitter</a>
-        <a href="mailto:binancedogbsc@gmail.com">Mail</a>
+        <a href="mailto:contact@binancedog.meme">Mail</a>
       </div>
     </section>
     <section class="tokenomics" id="tokenomics">
@@ -201,7 +201,7 @@
         <span>Our Socials:</span>
         <a href="https://x.com/BinanceDogStory" target="_blank">Twitter</a>
         <a href="https://t.me/BinanceDogStory" target="_blank">Telegram</a>
-        <a href="mailto:binancedogbsc@gmail.com">binancedogbsc@gmail.com</a>
+        <a href="mailto:contact@binancedog.meme">contact@binancedog.meme</a>
       </div>
       <span>$DOGS</span>
       <div>
