--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="header">
       <div class="header-intro">
-        <span>Hello I am</span>
+        <span>CTO</span>
         <span>$DOGS</span>
         <span>Meet new Chief Happiness Officer of BSC(Fanmade)</span>
         <div class="view-chart">
@@ -63,14 +63,17 @@
       </div>
     </section>
     <section class="about" id="about">
-      <span class="about-text">About $DOGS</span>
+      <span class="about-text">CTO $DOGS</span>
       <div>
         <div class="about-div">
-          <span>$DOGS is a representation for BSC pet community!(Fanmade)</span>
           <span
-            >$DOGS is inspired by the beloved BSC dog. He is also known as
-            BSC's model as he is lovely and enthusiastic as its owner. Let's
-            join the community and bond!</span
+            >The presale sold $DOGS, f*ck , we pumped it together,
+            and the community & early stage supporters bought back tokens and
+            Twitter access to govern the project.</span
+          >
+          <span
+            >We believe the community will take over: $DOGS will go far with
+            just the name and community governance.</span
           >
           <div>
             <img src="./images/newpic.PNG" alt="" />
@@ -143,8 +146,8 @@
       <div class="fyi">
         <span
           >(*) The number of $DOGS supply token is meaningfully made equally to
-          the BSC Founded Time: 07/2017 * 1,000,000, which adds more
-          significant meaning to the beloved dog!</span
+          the BSC Founded Time: 07/2017 * 1,000,000, which adds more significant
+          meaning to the beloved dog!</span
         >
         <a
           href="https://en.m.wikipedia.org/wiki/Binance"
@@ -182,8 +185,8 @@
           <span>Step 2</span>
           <span>Get some Sol</span>
           <span
-            >$DOGS is on Solana Chain, so you'll need some Sol tokens to purchase
-            it.</span
+            >$DOGS is on Solana Chain, so you'll need some Sol tokens to
+            purchase it.</span
           >
         </div>
         <div>
